src/test/deca/syntax/valid/test_synt/expressions/readint.deca
// Description:
//    Test de fonction readint
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 11/01/2022

{
    readint();
}