src/test/deca/syntax/invalid/not_provided/appel_fonction_imbrique.deca
// Description:
//    Test de fonction imbriquées.
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur:
//
// Historique:
//    cree le 05/01/2022

{
    println(println());
}